--- a/public/500.html
+++ b/public/500.html
@@ -18,9 +18,21 @@
 
 <body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>Sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+  <div class="dialog" style='width: 800px;'>
+      <table>
+          <tr>
+              <td align=left><img src="error-cat.jpg" width=400></img></td>
+              <td align=left>
+                  <div style='margin-left: 20px;'>
+                      <h1>Something Bad Happened!</h1>
+                      An unexpected error occurred.<p></p>
+                      <b>Detailed information about this error has been recorded and sent to Andy via email.</b><p></p>
+                      Contact Andy ( andy@r210.com / 650-823-0836 ) if you're wondering what happened, or want to know
+                      when the issue will be fixed.
+                  </div>
+              </td>
+          </tr>
+      </table>
   </div>
 </body>
 </html>
