internal AARs are working

--- a/public/500.html
+++ b/public/500.html
@@ -26,9 +26,9 @@
                   <div style='margin-left: 20px;'>
                       <h1>Something Bad Happened!</h1>
                       An unexpected error occurred.<p></p>
-                      <b>Detailed information about this error has been recorded and sent to Andy via email.</b><p></p>
-                      Contact Andy ( andy@r210.com / 650-823-0836 ) if you're wondering what happened, or want to know
-                      when the issue will be fixed.
+                      <b>Don't Panic!</b><br/>A problem report has been sent to Andy via email.<p></p>
+                      Contact Andy ( andy@r210.com / 650-823-0836 ) if want to
+                      know what happened, or when the issue will be fixed.
                   </div>
               </td>
           </tr>
