got tests running

--- a/public/500.html
+++ b/public/500.html
@@ -21,7 +21,7 @@
   <div class="dialog" style='width: 800px;'>
       <table>
           <tr>
-              <td align=left><img src="error-cat.jpg" width=400></img></td>
+              <td align=left><img src="/error-cat.jpg" width=400></img></td>
               <td align=left>
                   <div style='margin-left: 20px;'>
                       <h1>Something Bad Happened!</h1>
